toolchain/internal/core/analysis/testdata/errors/types/undefined_in_array.vdl
// @expect: E201

type User {
  profiles: Profile[]
}
